@@ -2,6 +2,15 @@
 
 	* gdb.python/py-explore.exp: Improve a test
 
+2013-01-21  Marc Khouzam  <marc.khouzam@ericsson.com>
+
+	* gdb.mi/mi-break.exp: Expect new 'thread-groups' field.
+	* gdb.mi/mi-nsmoribund.exp: Expect new 'thread-groups' field.
+	Also handle 'thread' field.
+	* gdb.mi/mi-simplerun.exp: Expect new 'thread-groups' field.
+	* gdb.mi/mi-watch.exp: Ditto.
+	* lib/mi-support.exp: Ditto.
+
 2013-01-18  David Blaikie  <dblaikie@gmail.com>
 
 	* gdb.base/label.c (main): Correct the type of the second
